# simulation_tool

./: .gitignore  README.md  pyproject.toml
legacy/: templates.py  templates_KF copy.py  templates_KF.py
params/: L2_parameters.txt  nk_P3HTPCBM_BHJ.txt  simulation_setup.txt
scripts/: analyse_data.py  plot_best_pces.py  plot_simulation_folder.py  post_process.py  post_process.sbatch  run.py  run.sbatch  run_jusuf.sbatch  run_nano.sbatch  run_original.py
src/simulation_tool/: EQE.py  __init__.py  absorption_coefficient.py  band_diagramm.py  constants.py  electric_field.py  exceptions.py  jV.py  session.py  typing_.py  utils.py  uvvis.py
src/simulation_tool/EQE/: __init__.py  data.py  simulation.py
src/simulation_tool/data/: __init__.py  absorption_coefficient.py  band_diagramm.py  electric_field.py  optical.py  uvvis.py
src/simulation_tool/jV/: __init__.py  data.py  simulation.py
src/simulation_tool/postprocessing/: core.py  plotting.py  saving.py
src/simulation_tool/randomization/: kf_adapted.py  original.py  rng_funcs.py  tracked.py
src/simulation_tool/simsalabim/: run.py
src/simulation_tool/templates/: __init__.py  layer.py  layer1.py  layer2.py  layer3.py  random copy.py  random.py  randomization.py  serializeable.py  simss.py  to_text.py
src/simulation_tool/ui/: progress_bar.py
tests/: test.py
