[project]
name = "simulation-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jona", email = "jona.oestreicher@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dataclass-wizard>=0.35.0",
    "joblib>=1.4.2",
    "numpy>=2.0.0",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "pysimsalabim",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.2",
]

[project.scripts]
simulation-tool = "simulation_tool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pysimsalabim = { git = "https://github.com/Jona210399/pySIMsalabim" }
