[project]
name = "simulation-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jona", email = "jona.oestreicher@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dataclass-wizard>=0.35.0",
    "huggingface-hub[cli]>=0.34.4",
    "matplotlib>=3.10.3",
    "numpy>=2.0.0",
    "polars>=1.27.1",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]

[project.scripts]
simulation-tool = "simulation_tool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
